# agents

./: .gitignore
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_extra.ipynb  Pract_Lab1.ipynb  Pract_Lab2.ipynb  Pract_Lab3.ipynb  Pract_Lab4.ipynb  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  Pract_lab1.ipynb  Pract_lab2.ipynb  pract_lab4.ipynb
2_openai/deep_research/: clarifying_questions_agent.py
3_crew/debate/: report.md
3_crew/debate/output/: decide.md  oppose.md  propose.md
3_crew/debate/src/debate/: crew.py  main.py
3_crew/debate/src/debate/config/: agents.yaml  tasks.yaml
3_crew/financial_researcher/output/: report.md
3_crew/financial_researcher/src/financial_researcher/: crew.py  main.py
3_crew/financial_researcher/src/financial_researcher/config/: agents.yaml  tasks.yaml
3_crew/stock_briefing/: README.md  pyproject.toml
3_crew/stock_briefing/src/stock_briefing/: crew.py  main.py
3_crew/stock_briefing/src/stock_briefing/tools/: custom_tool.py
3_crew/stock_picker/output/: decisions.md  research_report.md  trending_companies.json
3_crew/stock_picker/src/stock_picker/: crew.py  main.py
3_crew/stock_picker/src/stock_picker/config/: agents.yaml  tasks.yaml
3_crew/stock_picker/src/stock_picker/tools/: push_tool.py
Practise/: Work_1.ipynb
