[project]
name = "stock_briefing"
version = "0.1.0"
description = "stock_briefing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
stock_briefing = "stock_briefing.main:run"
run_crew = "stock_briefing.main:run"
train = "stock_briefing.main:train"
replay = "stock_briefing.main:replay"
test = "stock_briefing.main:test"
run_with_trigger = "stock_briefing.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
